fixed overflow of timepicker

--- a/TeamUp/public/stylesheets/create.css
+++ b/TeamUp/public/stylesheets/create.css
@@ -73,3 +73,7 @@ button.btn-primary {
 .sport-clicked {
   background-color: dodgerblue;
 }
+
+.input-group{
+  z-index: 0;
+}
